--- a/azure-pipelines-pr.yml
+++ b/azure-pipelines-pr.yml
@@ -20,3 +20,4 @@ extends:
     sonarScanProject: external-dcsa-events-processor
     failIfCoverageEmpty: false
     blackduckScanTags: dcsaevents
+    polarisScanBranch: main
