--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 pr:
-- main
+- master
 
 pool:
   vmImage: ubuntu-latest
@@ -18,6 +18,4 @@ extends:
   template: common.yml@templates
   parameters:
     sonarScanProject: external-dcsa-events-processor
-    failIfCoverageEmpty: false
     blackduckScanTags: dcsaevents
-    mainBranch: main
