--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,12 @@
         <azure.spring.data.cosmos.version>3.7.0</azure.spring.data.cosmos.version>
         <unit-tests.skip>false</unit-tests.skip>
         <integration-tests.skip>false</integration-tests.skip>
+        <project.scm.id>github</project.scm.id>
     </properties>
+    <scm>
+        <connection>scm:git:https://github.com/Maersk-Global/external-dcsa-events-processor.git</connection>
+        <tag>HEAD</tag>
+    </scm>
     <repositories>
         <repository>
             <id>java.artifacts</id>
