--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
         <connection>scm:git:https://github.com/Maersk-Global/external-dcsa-events-processor.git</connection>
         <tag>HEAD</tag>
     </scm>
+    <distributionManagement>
+        <repository>
+            <id>java.artifacts</id>
+            <url>
+                https://transport-logistics.pkgs.visualstudio.com/ef8fb13d-7d81-4ce8-bdd2-0f4d8c45e810/_packaging/java.artifacts/maven/v1
+            </url>
+        </repository>
+    </distributionManagement>
     <repositories>
         <repository>
             <id>java.artifacts</id>
