--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>net.apmoller.crb.microservices</groupId>
     <artifactId>external-dcsa-event-processor</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.3</version>
     <description>Processor for GEMS events for the external track and trace service</description>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -22,8 +22,16 @@
     </properties>
     <scm>
         <connection>scm:git:https://github.com/Maersk-Global/external-dcsa-events-processor.git</connection>
-        <tag>HEAD</tag>
+        <tag>external-dcsa-event-processor-0.0.3</tag>
     </scm>
+    <distributionManagement>
+        <repository>
+            <id>java.artifacts</id>
+            <url>
+                https://transport-logistics.pkgs.visualstudio.com/ef8fb13d-7d81-4ce8-bdd2-0f4d8c45e810/_packaging/java.artifacts/maven/v1
+            </url>
+        </repository>
+    </distributionManagement>
     <repositories>
         <repository>
             <id>java.artifacts</id>
