Added defaults for secrets

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 ENABLE_AZURE_VAULT: false
 AZURE_COSMOS_URI:
 AZURE_COSMOS_DATABASE:
-azureCosmosKey:
-azureCosmosSecondarykey:
+azureCosmosKey: dummyKey
+azureCosmosSecondarykey: DummySecondaryKey
 
 azure:
   keyvault:
