--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,3 +2,8 @@ ENABLE_AZURE_VAULT: true
 AZURE_VAULT_ADDRESS: https://dcsakvexternalapisdev.vault.azure.net/
 AZURE_COSMOS_URI: https://externalapisdcsadbdev.documents.azure.com:443/
 AZURE_COSMOS_DATABASE: externalapisdcsadbdev
+
+##Kafka
+KAFKA_BOOTSTRAP_SERVERS: "pkc-lq8gm.westeurope.azure.confluent.cloud:9092"
+KAFKA_CONSUMER_TOPIC: MSK.shipment.test.miscellaneousEvents.topic.internal.any.v1
+KAFKA_SCHEMA_REGISTRY_URL: "https://psrc-4kk0p.westeurope.azure.confluent.cloud"
