--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,4 @@ extends:
     sonarQubeProject: external-dcsa-events-processor
     blackduckScanTags: dcsaevents
     deployable: true
+    dockerRepository: 'external-dcsa-events-processor'
