--- a/helm/chart/values/preprod/values.yaml
+++ b/helm/chart/values/preprod/values.yaml
@@ -3,6 +3,7 @@ product: external-apis
 image: sharedacrweexternalapis.azurecr.io/external-dcsa-events-processor
 region: westeurope
 replicaCount: 1
+vaultRole: dcsatracktrace-dev
 kafka:
   bootstrapServers: pkc-lq8gm.westeurope.azure.confluent.cloud:9092
   topic: MSK.shipment.test.miscellaneousEvents.topic.internal.any.v1
