added helm support

--- a/helm/chart/values/preprod/values.yaml
+++ b/helm/chart/values/preprod/values.yaml
@@ -12,7 +12,7 @@ kafka:
   consumerGroup: MSK.shipment.mobile.consumerGroup.v1
   schemaRegistryUrl: https://psrc-4kk0p.westeurope.azure.confluent.cloud/
   schemaRegistryUsername: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/schemaRegistryUsername#schemaRegistryUsername
-  schemaRegistryPassword: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/schemaRegistryPassword#schemaRegistryPassword
+  schemaRegistryPassword: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/schemaRegistryUsername#schemaRegistryUsername
 resources:
   requests:
     memory: 512Mi
