--- a/helm/chart/values/preprod/values.yaml
+++ b/helm/chart/values/preprod/values.yaml
@@ -8,11 +8,11 @@ kafka:
   bootstrapServers: pkc-lq8gm.westeurope.azure.confluent.cloud:9092
   topic: MSK.shipment.test.miscellaneousEvents.topic.internal.any.v1
   username: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/username#username
-  password: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/username#username
+  password: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/password#password
   consumerGroup: MSK.shipment.mobile.consumerGroup.v1
   schemaRegistryUrl: https://psrc-4kk0p.westeurope.azure.confluent.cloud/
-  schemaRegistryUsername: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/username#username
-  schemaRegistryPassword: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/username#username
+  schemaRegistryUsername: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/schemaRegistryUsername#schemaRegistryUsername
+  schemaRegistryPassword: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/schemaRegistryPassword#schemaRegistryPassword
 resources:
   requests:
     memory: 512Mi
