--- a/helm/chart/templates/deployment.yaml
+++ b/helm/chart/templates/deployment.yaml
@@ -59,7 +59,15 @@ spec:
               scheme: HTTP
             failureThreshold: 5
             periodSeconds: 10
-            initialDelaySeconds: 200
+            initialDelaySeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+              scheme: HTTP
+            failureThreshold: 5
+            periodSeconds: 10
+            initialDelaySeconds: 10
           resources:
             requests:
               cpu: {{ .Values.resources.requests.cpu }}
