--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>net.apmoller.crb.microservices</groupId>
     <artifactId>external-dcsa-event-processor</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <description>Processor for GEMS events for the external track and trace service</description>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -34,7 +34,7 @@
     </properties>
     <scm>
         <connection>scm:git:https://github.com/Maersk-Global/external-dcsa-events-processor.git</connection>
-        <tag>external-dcsa-event-processor-0.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <repositories>
         <repository>
@@ -249,6 +249,7 @@
                     <version>${jib-maven-plugin.version}</version>
                     <executions>
                         <execution>
+                            <phase>package</phase>
                             <goals>
                                 <goal>release:prepare</goal>
                             </goals>
