--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
         <unit-tests.skip>false</unit-tests.skip>
         <integration-tests.skip>false</integration-tests.skip>
         <project.scm.id>github</project.scm.id>
+        <docker.image.prefix>sharedacrweexternalapis.azurecr.io</docker.image.prefix>
+        <java.version>1.8</java.version>
+        <jib-maven-plugin.version>2.2.0</jib-maven-plugin.version>
         <sonar.coverage.exclusions>
             **net/apmoller/crb/microservices/external/apis/dcsa/processor/config/**/*,
             **net/apmoller/crb/microservices/external/apis/dcsa/processor/models/**/*,
@@ -32,14 +35,6 @@
         <connection>scm:git:https://github.com/Maersk-Global/external-dcsa-events-processor.git</connection>
         <tag>HEAD</tag>
     </scm>
-    <distributionManagement>
-        <repository>
-            <id>java.artifacts</id>
-            <url>
-                https://transport-logistics.pkgs.visualstudio.com/ef8fb13d-7d81-4ce8-bdd2-0f4d8c45e810/_packaging/java.artifacts/maven/v1
-            </url>
-        </repository>
-    </distributionManagement>
     <repositories>
         <repository>
             <id>java.artifacts</id>
@@ -247,6 +242,27 @@
                         </excludes>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <artifactId>jib-maven-plugin</artifactId>
+                    <groupId>com.google.cloud.tools</groupId>
+                    <version>${jib-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>release:prepare</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <from>
+                            <image>mcr.microsoft.com/java/jdk:8-zulu-alpine</image>
+                        </from>
+                        <to>
+                            <image>${docker.image.prefix}/${project.artifactId}</image>
+                        </to>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
