--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,12 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
+
+trigger:
+  paths:
+    exclude:
+      - helm
+
 pr:
 - master
 
@@ -15,8 +21,8 @@ resources:
       name: External Apis/external-common-build-pipeline
 
 extends:
-  template: common.yml@templates
+  template: maven-docker.yml@templates
   parameters:
-    sonarScanProject: external-dcsa-events-processor
+    sonarQubeProject: external-dcsa-events-processor
     blackduckScanTags: dcsaevents
-    deployable: true
+    dockerRepository: 'external-dcsa-events-processor'
