Added the publisher topic details

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ ENABLE_AZURE_VAULT: false
 KAFKA_BOOTSTRAP_SERVERS: "localhost:9092"
 KAFKA_CONSUMER_TOPIC: MSK.shipment.test.miscellaneousEvents.topic.internal.any.v1
 KAFKA_CONSUMER_GROUP: MSK.external.dcsa.consumerGroup.v1
+KAFKA_PUBLISHER_TOPIC: DEMO.shipment.test.dummyEvents.topic.internal.any.v1
 KAFKA_SCHEMA_REGISTRY_URL: "http://localhost:8081"
 kafkaSchemaRegistryUsername:
 kafkaSchemaRegistryPassword:
@@ -20,6 +21,8 @@ kafka:
   security-protocol: SASL_SSL
   sasl-mechanism: PLAIN
   client-id: external-dcsa-events-processor
+  publisher:
+    topic: ${KAFKA_PUBLISHER_TOPIC}
   schemaRegistry:
     url: ${KAFKA_SCHEMA_REGISTRY_URL}
     username: ${kafkaSchemaRegistryUsername}
