Made some changes

--- a/src/integrationtest/resources/testConfiguration.properties
+++ b/src/integrationtest/resources/testConfiguration.properties
@@ -4,3 +4,4 @@ KAFKA_CONSUMER_GROUP: MSK.external.dcsa.consumerGroup.v1
 KAFKA_SCHEMA_REGISTRY_URL: "http://localhost:8081"
 KAFKA_PUBLISHER_TOPIC: DEMO.shipment.test.dummyEvents.topic.internal.any.v1
 KAKFA_PORT: "8081"
+KAKFA_BOOTSTRAP_PORT: "8081"
