--- a/src/integrationtest/resources/testConfiguration.properties
+++ b/src/integrationtest/resources/testConfiguration.properties
@@ -5,3 +5,5 @@ KAFKA_SCHEMA_REGISTRY_URL: "http://localhost:8081"
 KAFKA_PUBLISHER_TOPIC: DEMO.shipment.test.dummyEvents.topic.internal.any.v1
 KAKFA_PORT: "8081"
 KAKFA_BOOTSTRAP_PORT: "8081"
+
+spring.main.allow-bean-definition-overriding=true
