And verification works

--- a/src/integrationtest/resources/testConfiguration.properties
+++ b/src/integrationtest/resources/testConfiguration.properties
@@ -2,7 +2,7 @@ KAFKA_BOOTSTRAP_SERVERS: "localhost:9092"
 KAFKA_CONSUMER_TOPIC: MSK.shipment.test.miscellaneousEvents.topic.internal.any.v1
 KAFKA_CONSUMER_GROUP: MSK.external.dcsa.consumerGroup.v1
 KAFKA_SCHEMA_REGISTRY_URL: "http://localhost:8081"
-KAFKA_PUBLISHER_TOPIC: DEMO.shipment.test.dummyEvents.topic.internal.any.v1
+KAFKA_PUBLISHER_TOPIC: MSK.shipment.test.externalDcsaEvents.topic.internal.any.v1
 KAKFA_PORT: "8081"
 KAKFA_BOOTSTRAP_PORT: "8081"
 
