Updated Helm chart

--- a/helm/chart/templates/deployment.yaml
+++ b/helm/chart/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
               value: {{ .Values.kafka.schemaRegistryUsername }}
             - name: kafkaSchemaRegistryPassword
               value: {{ .Values.kafka.schemaRegistryPassword }}
+            - name: KAFKA_PUBLISHER_TOPIC
+              value: {{ .Values.kafka.publisherTopic}}
           imagePullPolicy: Always
           ports:
             - name: http
