--- a/helm/chart/values/pp/values.yaml
+++ b/helm/chart/values/pp/values.yaml
@@ -6,7 +6,8 @@ replicaCount: 1
 vaultRole: dcsatracktrace-dev
 kafka:
   bootstrapServers: pkc-lq8gm.westeurope.azure.confluent.cloud:9092
-  topic: MSK.shipment.test.miscellaneousEvents.topic.internal.any.v1
+  topic: MSK.shipment.miscellaneousEvents.topic.internal.any.v2
+  publisherTopic: MSK.shipment.externalDcsaEvents.topic.internal.any.v1
   username: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/username#username
   password: vault:externalapis-kv/data/preprod/services/dcsa-events-processor/kafka/password#password
   consumerGroup: MSK.external.dcsa.consumerGroup.v1
